# geomie3d

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  python-app.yml
geomie3d/: __init__.py  calculate.py  create.py  d4pispace.py  geom.py  get.py  modify.py  topo.py  topobj.py  utility.py
geomy3d/: __init__.py  calculate.py  create.py  geom.py  topo.py
src/geomie3d/: __init__.py  calculate.py  create.py  d4pispace.py  earcut.py  geom.py  get.py  modify.py  settings.py  topobj.py  utility.py  viz.py
src/geomie3d/geomdl/: BSpline.py  CPGen.py  NURBS.py  __init__.py  _convert.py  _exchange.py  _linalg.py  _operations.py  _tessellate.py  _utilities.py  _voxelize.py  abstract.py  compatibility.py  construct.py  control_points.py  convert.py  elements.py  evaluators.py  exceptions.py  exchange.py  exchange_vtk.py  fitting.py  freeform.py  functools_lru_cache.py  helpers.py  knotvector.py  linalg.py  multi.py  operations.py  ray.py  shortcuts.py  sweeping.py  tessellate.py  trimming.py  utilities.py  vis.py  voxelize.py
src/geomie3d/geomdl/visualization/: VisMPL.py  VisPlotly.py  VisVTK.py  __init__.py  vtk_helpers.py
tests/: test_calc.py  test_create.py  test_modify.py  test_viz.py
