[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geomie3d"
version = "0.0.7"
authors = [
  { name="Kian Wee CHEN", email="chenkianwee@gmail.com" },
]
description = 'Python library for processing 3d geometry'
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
               "Programming Language :: Python :: 3.10",
               "Operating System :: OS Independent"]
dependencies = ['numpy==1.26.3',
                'pyqtgraph==0.13.3', 
                'PyOpenGL==3.1.7',
                'PyQt6==6.6.1',
                'python-dateutil==2.8.2']

[project.urls]
"Homepage" = "https://github.com/chenkianwee/geomie3d"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"